[package]
name = "badass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive", "env"] }
minijinja = {  version = "1.0.12", features = ["loader"] }
anyhow = "1.0.80"
glob = "0.3.1"
config = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
itertools = "0.12.1"
log = "0.4.21"
log4rs = "1.3.0"

