[package]
name = "badass"
version = "0.1.3"
edition = "2021"
description = "badass is a cli tool inspired by dbt and airflow"
homepage = "https://github.com/timvw/badass"
repository = "https://github.com/timvw/badass"
readme = "README.md"
authors = ["Tim Van Wassenhove <tim@timvw.be>"]
license = "Apache-2.0"
keywords = [ "badass", "dbt", "sql", "airflow", "data-engineer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
minijinja = {  version = "1.0.15", features = ["loader"] }
anyhow = "1.0.81"
glob = "0.3.1"
config = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
itertools = "0.14.0"
log = "0.4.21"
log4rs = "1.3.0"
camino = { version = "1.1.6", features = ["serde1"] }
postgres = "0.19.7"
tabled = "0.20.0"
chrono = "0.4.35"

